# mars

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: FindSkia.cmake  Finddrm.cmake  Findsystemd.cmake  Findudev.cmake
include/mars/: Log.hpp
include/mars/drm/: DrmAtomicRequest.hpp  DrmConnector.hpp  DrmDevice.hpp  DrmDeviceResources.hpp  DrmDumbBuffer.hpp  DrmEncoder.hpp  DrmFrameBuffer.hpp  DrmObjectProperties.hpp  DrmPlane.hpp  DrmPlaneResources.hpp  DrmPresentationBackend.hpp  DrmPresentationSystem.hpp  DrmPresenter.hpp  DrmPropertyBlob.hpp  DrmResourcePtr.hpp  DrmSurface.hpp  DrmSwapchain.hpp  DrmVideoDisplayController.hpp
include/mars/session/: LogindSession.hpp
src/: Log.cpp  main.cpp
src/drm/: DrmAtomicRequest.cpp  DrmConnector.cpp  DrmDevice.cpp  DrmDeviceResources.cpp  DrmDumbBuffer.cpp  DrmEncoder.cpp  DrmFrameBuffer.cpp  DrmPresentationBackend.cpp  DrmPresentationSystem.cpp  DrmSurface.cpp  DrmSwapchain.cpp  DrmVideoDisplayController.cpp
src/session/: LogindSession.cpp
